<resources>
    <string name="app_name">EmpressNotes</string>
    <string name="app_title">Empress Notes</string>
    <string name="app_sub_title">All your notes made simple</string>

    <string name="my_diary">My Diary</string>
    <string name="my_to_do">My To-Do</string>
    <string name="my_notes">My Sticky Notes</string>
    <string name="my_lists">My Lists</string>
    <string name="diary_tab_description">Keep a diary, and someday it will keep you.</string>
    <string name="to_do_tab_description">Wisdom is knowing what to do next, virtue is doing it.</string>
    <string name="notes_tab_description">When your heart speaks, take good notes.</string>
    <string name="list_tab_description">What you spend hours writing, then forget to take with you to the store.</string>

    //My Diary
    <string name="my_diary_">My Diary</string>
    <string name="search_diary">Search Diary</string>
    <string name="title">Title</string>
    <string name="hint_diary_title">Enter diary Title</string>

    //My To-Do
    <string name="label_add_task">Add Task</string>
    <string name="text_task_count">Display Task Count</string>
    <string name="text_search_task">Search task</string>
    <string name="text_add_task_instruct">Fill details below to add a task to your TODO</string>
    <string name="text_task_title">Task Title*</string>
    <string name="text_task_description">Task Description*</string>
    <string name="text_date">Date*</string>
    <string name="text_time">Time</string>
    <string name="hint_task_title">Enter Task Title</string>
    <string name="hint_task_description">Enter Task Description</string>
    <string name="hint_date">Select the Date</string>
    <string name="hint_time">Select Time</string>
    <string name="btnText_save">Save Task</string>
    <string name="btnText_add_url">Add URL</string>
    <string name="menu_delete_task">Delete Task</string>
    <string name="menu_delete_all">Delete All</string>


    //My Notes
    <string name="search_notes">Search Sticky Notes</string>
    <string name="hint_note_title">Enter Note Title</string>
    <string name="hint_Note">Enter Your Note Here</string>
    <string name="btnText_addNote">Save</string>
    <string name="btnText_editNote">Edit</string>
    <string name="btnText_deleteNote">Delete</string>

    //My Lists
    <string name="my_list">My List</string>
    <string name="label_noData">No Data</string>
    <string name="new_sticky_note">New Sticky Note</string>
    <string name="txt_word_count">Word count</string>
    <string name="date_time">Date Time</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this Note ?</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>
    <string name="are_you_sure_you_want_to_delete_all_notes">Are you sure you want to delete all Notes ?</string>


</resources>