<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/app_sub_title"
        android:textAlignment="center"
        android:textSize="15sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:id="@+id/layoutDiaryMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/diary_theme_color"
            android:padding="10dp">

            <TextView
                android:id="@+id/textMyDiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/my_diary"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textMyDiary"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/diary_tab_description"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:maxHeight="100dp"
                android:src="@drawable/ic_diary"
                android:contentDescription="@string/app_name" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp" >

        <RelativeLayout
            android:id="@+id/layoutToDoMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/todo_theme_color"
            android:padding="10dp">

            <TextView
                android:id="@+id/textMyToDo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/my_to_do"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textMyToDo"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/to_do_tab_description"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:maxHeight="100dp"
                android:src="@drawable/ic_todo"
                android:contentDescription="@string/app_name" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp" >

        <RelativeLayout
            android:id="@+id/layoutNotesMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/notes_theme_color"
            android:padding="10dp">

            <TextView
                android:id="@+id/textAllTasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/my_notes"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textAllTasks"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/notes_tab_description"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:maxHeight="100dp"
                android:src="@drawable/ic_notes"
                android:contentDescription="@string/app_name" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp" >

        <RelativeLayout
            android:id="@+id/layoutListsMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/list_theme_color"
            android:padding="10dp">

            <TextView
                android:id="@+id/textMyList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/my_lists"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textMyList"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/list_tab_description"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:maxHeight="100dp"
                android:src="@drawable/ic_list"
                android:contentDescription="@string/app_name"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>