<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateNote">

    <View
        android:id="@+id/viewInputIndicator"
        android:layout_width="@dimen/_5sdp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_12sdp"
        android:background="@color/notes_theme_color"
        app:layout_constraintBottom_toBottomOf="@id/inputNoteTitleEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/inputNoteTitleEdit" />

    <EditText
        android:id="@+id/inputNoteTitleEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/hint_note_title"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_text_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/viewInputIndicator"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewInputIndicator2"
        android:layout_width="@dimen/_5sdp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_12sdp"
        android:background="@color/notes_theme_color"
        app:layout_constraintBottom_toBottomOf="@id/inputNoteEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/inputNoteEdit" />

    <EditText
        android:id="@+id/inputNoteEdit"
        android:layout_width="360dp"
        android:layout_height="126dp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@null"
        android:fontFamily="@font/poppins_regular"
        android:gravity="top"
        android:hint="@string/hint_Note"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textMultiLine"
        android:minHeight="38dp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/viewInputIndicator2"
        app:layout_constraintTop_toBottomOf="@+id/inputNoteTitleEdit" />

    <Button
        android:id="@+id/btnNoteEdit"
        android:layout_width="112dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_button"
        android:text="@string/btnText_editNote"
        android:textAllCaps="false"
        android:textColor="#FAFAFA"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNoteEdit" />

    <Button
        android:id="@+id/btnNoteDelete"
        android:layout_width="104dp"
        android:layout_height="54dp"
        android:layout_marginEnd="84dp"
        android:background="@drawable/delete_button"
        android:text="@string/btnText_deleteNote"
        android:textAllCaps="false"
        android:textColor="#FAFAFA"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnNoteEdit"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lbl_word_count_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/inputNoteEdit"
        app:layout_constraintEnd_toEndOf="@+id/inputNoteEdit" />


</androidx.constraintlayout.widget.ConstraintLayout>